Can't get sound.factory on Windows #63899

Closed
opened 2019-04-26 07:31:20 +02:00 by Robert Juricek · 10 comments
First-time contributor

System Information
Operating system: Windows
Graphics card: unrelated

Blender Version
Broken: (2.80, any, master)

Short description of error
Running python "somesound.factory" on Windows ends with error:

OverflowError: Python int too large to convert to C long
The above exception was the direct cause of the following exception:
Traceback (most recent call last):
  File "<blender_console>", line 1, in <module>
  File "C:\blender-git\build_windows_Full_x64_vc16_Release\bin\Release\2.80\scripts\modules\bpy_types.py", line 543, in factory
    return aud._sound_from_pointer(self.as_pointer())
SystemError: <built-in function _sound_from_pointer> returned a result with an error set

I'm pretty sure the problem is in the file intern/audaspace/intern/AUD_PyInit.cpp , function AUD_getSoundFromPointer. long int lptr is of size 4 bytes, and I'm running 64bit system.

Exact steps for others to reproduce the error

  1. add any sound, for example in Video Sequencer
  2. run in scripting console: bpy.data.sounds- .factory
**System Information** Operating system: Windows Graphics card: unrelated **Blender Version** Broken: (2.80, any, master) **Short description of error** Running python "somesound.factory" on Windows ends with error: ``` OverflowError: Python int too large to convert to C long ``` ``` The above exception was the direct cause of the following exception: ``` ``` Traceback (most recent call last): File "<blender_console>", line 1, in <module> File "C:\blender-git\build_windows_Full_x64_vc16_Release\bin\Release\2.80\scripts\modules\bpy_types.py", line 543, in factory return aud._sound_from_pointer(self.as_pointer()) SystemError: <built-in function _sound_from_pointer> returned a result with an error set ``` I'm pretty sure the problem is in the file intern/audaspace/intern/AUD_PyInit.cpp , function AUD_getSoundFromPointer. long int lptr is of size 4 bytes, and I'm running 64bit system. **Exact steps for others to reproduce the error** 1. add any sound, for example in Video Sequencer 2. run in scripting console: bpy.data.sounds- [x].factory
Author
First-time contributor

Added subscriber: @rooobertek

Added subscriber: @rooobertek

Added subscribers: @LazyDodo, @ZedDB

Added subscribers: @LazyDodo, @ZedDB

@LazyDodo can you reproduce this?

@LazyDodo can you reproduce this?
Joerg Mueller was assigned by Ray molenkamp 2019-04-26 17:16:22 +02:00
Member

Added subscriber: @neXyon

Added subscriber: @neXyon
Member

I can't repro the issue, but i can validate that sizeof(long int) = 4 on x64, so that's definitely not large enough for a 64 bit pointer.

@neXyon mind taking this one?

I can't repro the issue, but i can validate that `sizeof(long int) = 4` on x64, so that's definitely not large enough for a 64 bit pointer. @neXyon mind taking this one?
First-time contributor

This issue was referenced by 157cc54ed5

This issue was referenced by 157cc54ed52192ef6994bcc6a975c4399503ac25
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

I can't reproduce either, but that commit should fix it. Feel free to reopen if it doesn't.

I can't reproduce either, but that commit should fix it. Feel free to reopen if it doesn't.
Author
First-time contributor

You are AWESOME! Thanks, this fixed the issue.

You are AWESOME! Thanks, this fixed the issue.
Member

You're welcome. Thanks for reporting!

You're welcome. Thanks for reporting!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#63899
No description provided.