Fix T63899: Can't get sound.factory on Windows